--- a/ship_diary_dj/templates/base.html
+++ b/ship_diary_dj/templates/base.html
@@ -42,14 +42,33 @@
         </div>
 
         <div class="main">
-        <h1>main contentas</h1>
+        <h1></h1>
             {% block content %}
 
             {% endblock %}
         </div>
 
         <div class="right">
-            <!-- Right column content -->
+            <script type="text/javascript">
+    // Map appearance
+    var width="100%";         // width in pixels or percentage
+    var height="300";         // height in pixels
+    var latitude="0.00";      // center latitude (decimal degrees)
+    var longitude="0.00";     // center longitude (decimal degrees)
+    var zoom="3";             // initial zoom (between 3 and 18)
+    var names=true;          // always show ship names (defaults to false)
+
+    // Single ship tracking
+    var mmsi="123456789";     // display latest position (by MMSI)
+    var imo="1234567";        // display latest position (by IMO, overrides MMSI)
+    var show_track=false;     // display track line (last 24 hours)
+
+    // Fleet tracking
+    var fleet="e48ab3d80a0e2a9bf28930f2dd08800c"; // your personal Fleet key (displayed in your User Profile)
+    var fleet_name="Carnival"; // display particular fleet from your fleet list
+    var fleet_timespan="1440"; // maximum age in minutes of the displayed ship positions
+</script>
+<script type="text/javascript" src="https://www.vesselfinder.com/aismap.js"></script>
         </div>
 
         <div class="footer_custom">
