--- a/static/diary/css/page_style.css
+++ b/static/diary/css/page_style.css
@@ -1,3 +1,12 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+
+
+
+
 body {
     margin: 0;
     padding: 0;
@@ -87,7 +96,7 @@ body {
 
 .right {
     grid-area: right;
-    background-color: rgb(248, 96, 0);
+    background-color: rgb(222, 222, 222);
     padding: 5px;
 }
 
@@ -469,4 +478,94 @@ body {
 
 .submit_button_form_field:hover {
     background-color: #553c9a;
+}
+
+
+.dropbtn {
+    color: white;
+    background: linear-gradient(135deg, transparent 10px, #0d1c32 0) no-repeat;
+    padding: 8px 16px;
+    text-decoration: none;
+    display: inline-block;
+    border-radius: 5px;
+    text-align: center;
+    line-height: 1.5;
+    min-width: 120px;
+    max-width: 200px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.dropdown_geeks {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown_geeks_content {
+    display: none;
+    position: absolute;
+    background-color: #bda8ec;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown_geeks_content a {
+    color: #f4f3f3;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown_geeks_content a:hover {
+    background-color: #ddd;
+    padding: 12px;
+    color: #e96300;
+    border-radius: 5px;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown_geeks:hover .dropdown_geeks_content {
+    display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown_geeks:hover .dropbtn {
+    background-color: #ff6a00;
+}
+
+.messages {
+    list-style: none;
+    padding: 10px;
+    margin-bottom: 20px;
+    border-radius: 4px;
+}
+
+.messages li {
+    padding: 10px;
+    margin-bottom: 5px;
+    border-radius: 4px;
+}
+
+.messages .success {
+    background-color: #d4edda;
+    color: #155724;
+    border: 1px solid #c3e6cb;
+    font-family: "Bookman Old Style";
+}
+
+.messages .error {
+    background-color: #f8d7da;
+    color: #721c24;
+    border: 1px solid #f5c6cb;
+    font-family: "Bookman Old Style";
+}
+
+.error-messages, .error {
+    color: #ff0000;
+    font-size: 0.9em;
+    margin-top: 5px;
+    font-family: "Bookman Old Style";
+    background-color: rgba(2, 0, 7, 0.56);
 }
